# Astranova_AI

./: README.md  index.html  main.py  pyproject.toml
static/: requirements.txt
templates/: index.html
