[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "authlib>=1.6.0",
    "flask-sqlalchemy>=3.1.1",
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "google-generativeai>=0.8.5",
    "flask-bcrypt>=1.0.1",
    "werkzeug>=3.1.3",
    "requests>=2.32.4",
]

[tool.poetry]
name = "workspace"
version = "0.1.0"
description = ""
authors = ["Anamitra Sarkar <45115668-anamitrasarslsn@users.noreply.replit.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
google-generativeai = "^0.8.5"
flask = "^3.1.1"
flask-cors = "^6.0.1"
requests = "^2.32.4"
fpdf = "^1.7.2"
python-pptx = "^1.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
