[tool.poetry]
name = "astranova-ai"
version = "0.1.0"
description = "My Astranova AI Chat App"
authors = ["Anamitra Sarkar <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"

# Corrected and merged dependencies
flask = "^3.0.0"
flask-sqlalchemy = "^3.1.1"
flask-cors = "^4.0.1"
flask-bcrypt = "^1.0.1"
google-generativeai = "^0.8.5"
authlib = "^1.3.1"
werkzeug = "^3.0.3"
requests = "^2.32.3"
fpdf = "^1.7.2"
python-pptx = "^0.6.23"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
